--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
 html {
   box-sizing: border-box;
@@ -59,7 +59,7 @@ button {
   border: none;
   border-radius: 10px;
   color: #fff;
-  background: #333;
+  background: rgb(80, 74, 74);
   outline: none;
   padding: 0.5rem 1.8rem;
   box-shadow: 0 0.3rem rgb(121, 121, 121, 0.65);
@@ -67,6 +67,7 @@ button {
 
 button:hover {
   filter: brightness(115%);
+  background: #8b6692;
 }
 
 button:active {
@@ -80,6 +81,26 @@ button:active {
 
 .fa-twitter {
   font-size-adjust: 1.5rem;
+}
+
+/* Loader */
+.loader {
+  border: 16px solid #c4b5c0;
+  border-top: 16px solid #8b6692;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+/* animation used for loader to spin */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Media Query: Tablet or Smaller */
